View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0027693 | Open CASCADE | OCCT:Mesh | public | 2016-07-19 16:12 | 2018-11-11 12:01 |
Reporter | msv | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.0.0 | ||||
Target Version | 7.4.0 | Fixed in Version | 7.4.0 | ||
Summary | 0027693: BRepMesh: fine edge tessellation leads to excess number of triangles along the whole U or V stripes | ||||
Description | This bug is created in the wake of the forum thread http://www.opencascade.com/comment/19328. The quote: I'm using BRepMesh_IncrementalMesh to tessellate faces and I'm getting a weird behaviour: whenever a edge requires a finer set of triangles the whole U and V strips are using that smaller triangle size (see attached picture). I agree I should get a higher number of triangles near the round borders, but I wouldn't expect the corresponding horizontal and vertical strips to be over-triangularized. | ||||
Steps To Reproduce | stepread cornetta-step.stp a * renamevar a_1 a explode a f copy a_4 f don f incmesh f 0.01 -a 90 isos f 0 triangles f trinfo f | ||||
Tags | No tags attached. | ||||
Test case number | bugs/mesh/bug27693 | ||||
|
cornetta-step.stp (373,438 bytes) |
|
mesh.png (98,331 bytes) |
|
mesh_current.PNG (34,901 bytes) |
|
I have updated steps to reproduce and attached the mesh generated by the current master version of OCCT. |
|
Dear Oleg, please take care of this bug in the scope of your current work on refactoring of BRepMesh, or check after you have completed it. |
|
Fixed in context of 0026106 issue |
|
Dear Mikhail, The behavior of this issue seems to be OK on the fix 0030322. Please check. |
|
Please create a test case to close it. |
|
Branch CR27693 has been created by nbv. SHA-1: a39c397f1d91c553399692533842a7ca20fff91b Detailed log of new commits: Author: nbv Date: Tue Nov 6 14:22:14 2018 +0300 0027693: BRepMesh: fine edge tessellation leads to excess number of triangles along the whole U or V stripes Only test case has been created. |
|
Branch CR27693 has been updated forcibly by nbv. SHA-1: 684d06a279891207602bf7c1b262cc09a23fac14 |
|
Branch CR27693 has been updated forcibly by nbv. SHA-1: 107a941fdc053caff0b864bc7efb7cdb6bc1f474 |
|
Branch CR27693 has been updated forcibly by nbv. SHA-1: 5f90b2e9c70f8dbb3d09bce589f28d9a3be8554b |
|
Dear Mikhail, Please review the branch CR27693. Test results are here: Windows: http://jenkins-test-12.nnov.opencascade.com/view/MeshTest-master_NBV/view/TESTING/job/MeshTest-master_NBV-OCCT-Windows-64-VC14-opt-test-restart/HTML_20Report/ Linux: http://jenkins-test-12.nnov.opencascade.com/view/MeshTest-master_NBV/view/TESTING/job/MeshTest-master_NBV-OCCT-Debian80-64-opt-test-restart/HTML_20Report/ |
|
The shape triangulation is not visible. Please make top small view and fit. |
|
Branch CR27693 has been updated forcibly by nbv. SHA-1: 2385bd175dd29b35b53bffd9acba8e016fff3342 |
|
Done. Please review the branch CR27693 again. |
|
Reviewed. |
|
Adding test case |
|
Branch CR27693 has been deleted by inv. SHA-1: 2385bd175dd29b35b53bffd9acba8e016fff3342 |
occt: master fb99e177 2018-11-06 11:22:14
Committer: bugmaster Details Diff |
0027693: BRepMesh: fine edge tessellation leads to excess number of triangles along the whole U or V stripes Adding test case for the problem. The issue has been fixed by a patch for 0026106. |
Affected Issues 0027693 |
|
add - tests/bugs/mesh/bug27693 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2016-07-19 16:12 | msv | New Issue | |
2016-07-19 16:12 | msv | Assigned To | => oan |
2016-07-19 16:12 | msv | File Added: cornetta-step.stp | |
2016-07-19 16:14 | msv | Description Updated | |
2016-07-19 16:14 | msv | File Added: mesh.png | |
2016-07-22 16:03 | msv | Assigned To | oan => imn |
2016-07-22 16:03 | msv | Status | new => assigned |
2016-08-04 12:51 | msv | Steps to Reproduce Updated | |
2016-08-04 12:52 | msv | File Added: mesh_current.PNG | |
2016-08-04 12:53 | msv | Note Added: 0056463 | |
2016-10-25 17:43 | oan | Relationship added | related to 0026965 |
2016-10-25 17:51 | msv | Note Added: 0059114 | |
2016-10-25 17:51 | msv | Assigned To | imn => oan |
2016-11-09 11:03 | abv | Target Version | 7.1.0 => 7.2.0 |
2017-07-20 12:43 | oan | Target Version | 7.2.0 => 7.3.0 |
2017-08-11 11:52 | oan | Relationship added | related to 0026106 |
2017-08-11 11:53 | oan | Note Added: 0069307 | |
2018-02-25 21:14 | abv | Target Version | 7.3.0 => 7.4.0 |
2018-11-02 15:54 |
|
Note Added: 0080635 | |
2018-11-02 15:54 |
|
Assigned To | oan => msv |
2018-11-02 15:54 |
|
Status | assigned => feedback |
2018-11-02 18:56 | msv | Note Added: 0080667 | |
2018-11-02 18:57 | msv | Assigned To | msv => oan |
2018-11-02 18:57 | msv | Status | feedback => assigned |
2018-11-02 19:01 | oan | Assigned To | oan => nbv |
2018-11-02 19:01 | oan | Status | assigned => feedback |
2018-11-06 14:24 | git | Note Added: 0080744 | |
2018-11-07 13:48 | git | Note Added: 0080822 | |
2018-11-07 17:13 | git | Note Added: 0080857 | |
2018-11-07 18:03 | git | Note Added: 0080886 | |
2018-11-07 18:08 |
|
Note Added: 0080892 | |
2018-11-07 18:08 |
|
Assigned To | nbv => oan |
2018-11-07 18:08 |
|
Status | feedback => resolved |
2018-11-07 18:20 |
|
Assigned To | oan => msv |
2018-11-08 09:57 | msv | Note Added: 0080909 | |
2018-11-08 09:57 | msv | Assigned To | msv => nbv |
2018-11-08 09:57 | msv | Status | resolved => assigned |
2018-11-08 10:12 | git | Note Added: 0080911 | |
2018-11-08 10:17 |
|
Note Added: 0080912 | |
2018-11-08 10:17 |
|
Assigned To | nbv => msv |
2018-11-08 10:17 |
|
Status | assigned => resolved |
2018-11-08 10:24 | msv | Note Added: 0080914 | |
2018-11-08 10:24 | msv | Assigned To | msv => bugmaster |
2018-11-08 10:24 | msv | Status | resolved => reviewed |
2018-11-08 13:48 | bugmaster | Note Added: 0080946 | |
2018-11-08 13:48 | bugmaster | Status | reviewed => tested |
2018-11-09 15:46 | bugmaster | Test case number | => bugs/mesh/bug27693 |
2018-11-11 11:52 | bugmaster | Changeset attached | => occt master fb99e177 |
2018-11-11 11:52 | bugmaster | Status | tested => verified |
2018-11-11 11:52 | bugmaster | Resolution | open => fixed |
2018-11-11 12:01 | git | Note Added: 0081032 |