0027693: BRepMesh: fine edge tessellation leads to excess number of triangles along the whole U or V stripes

Initialize parameters map using CN intervals in case of NURBS.
NURBS range splitter: remove code duplications; refuse addition of a single internal vertex in case of single interval along U and V
Separate range splitter for surfaces of revolution implementing old approach using U and V parameters taken from discrete edges.