src/BRepMesh/BRepMesh_TorusRangeSplitter.hxx
@@ -132,6 +132,14 @@ public:
     return aNodes;
   }
 
+  //! Registers border point.
+  Standard_EXPORT virtual void AddPoint(const gp_Pnt2d& thePoint)
+  {
+    BRepMesh_DefaultRangeSplitter::AddPoint(thePoint);
+    GetParametersU().Add(thePoint.X());
+    GetParametersV().Add(thePoint.Y());
+  }
+
 private:
 
   Handle(IMeshData::SequenceOfReal) fillParams(
